syntax = "proto3";

message TestMsg {
	string name = 1;
	int32 number = 2;
	int32 num = 5;
	int32 opt = 3;
	repeated string array = 4;
	enum enum1 {
		a0 = 0;
		b0 = 1;
	}
}

enum enum2 {
	aa = 0;
	bb = 1;
}

message TestMsg2 {
	int32 a = 1;
	int32 p = 2;
	string o = 4;
	message TestMsg3 {
		repeated string s = 2;
		enum enum3 {
			aaa = 0;
			bbb = 1;
		}
	}
	repeated int32 k = 3;
}

message TestMsg4 {
	int32 n = 1;
	int32 p = 2;
	string o = 4;
	message TestMsg5 {
		repeated string s = 2;
		message TestMsg6 {
			repeated string s = 2;
		}
	}
	repeated int32 k = 3;
	enum enum4 {
		aaaa = 0;
		bbbb = 1;
	}
}

enum enum5 {
	a = 0;
	b = 1;
}

message TestMsg7 {
	enum enum6 {
		a6 = 0;
		b6 = 1;
	}
	int32 n = 1;
	int32 p = 2;
	string o = 4;
	message TestMsg8 {
		repeated string s = 2;
		enum enum7 {
			a7 = 0;
			b7 = 1;
		}
	}
	repeated int32 k = 3;
}

message TestMsg9 {
	message TestMsg10 {
		string p = 2;
		enum enum8 {
			a8 = 0;
			b8 = 1;
		}
	}
}
